--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,14 @@
     <TextView android:text="Hello World!" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
+        android:layout_below="@+id/swtModel"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/btnScan"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/swtDebug"
-        android:layout_alignEnd="@+id/swtDebug"
-        android:layout_above="@+id/btnScan"
-        android:layout_below="@+id/urlText" />
+        android:gravity="center_vertical|center_horizontal"
+        android:textSize="25dp" />
 
     <Button
         android:layout_width="100dp"
@@ -28,22 +30,11 @@
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Debug"
-        android:id="@+id/swtDebug"
+        android:text="RBF"
+        android:id="@+id/swtModel"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:checked="false" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/urlText"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/swtDebug"
-        android:layout_toStartOf="@+id/swtDebug"
-        android:text="192.168." />
 
 </RelativeLayout>
